--- a/travel_recommendations.css
+++ b/travel_recommendations.css
@@ -17,6 +17,7 @@ h1{
     color:white;
     font-size: 25px;
 }
+
   
   nav ul {
     list-style-type: none;
@@ -34,32 +35,34 @@ h1{
     font-weight: bold;
   }
   
-  /* Basic CSS for the form elements */
+  /* Basic CSS for the webpage elements */
   body {
-    background-image: url()
+    background-image: url("https://media.istockphoto.com/id/1353245759/photo/aerial-view-of-cala-dhort-ibiza.jpg?s=612x612&w=0&k=20&c=ecIcw6as7cfnhAM0ep24JfbcCR0m1g-O1beyvhylwQQ=");
     font-family: Arial, sans-serif;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height:100vh;
     /* margin: 20px; */
   }
-  
-  h1 {
-    margin-bottom: 20px;
-  }
-  
-  div {
-    margin-bottom: 10px;
-  }
-  
-  label {
-    display: inline-block;
-    width: 100px;
-  }
-  
-  input[type="text"],
-  input[type="number"],
-  select {
-    width: 200px;
-    padding: 5px;
-  }
+   
+/*Homepage*/
+
+#home h1{
+    margin-top: 30px;
+    color:white;
+    font-size: 70px;
+    width:100px;
+    padding:50px;
+}
+
+#home p{
+    margin-top: 30px;
+    color:white;
+    font-size: 20px;
+    width:400px; 
+    padding:50px; 
+}
   
   button {
     padding: 7px 15px;
@@ -73,26 +76,68 @@ h1{
     background-color: #45a049;
   }
   
-  /* Basic CSS for the report section */
-  h2 {
+
+
+
+/* About Us */
+
+#about h1{
     margin-top: 30px;
+    color:white;
+    font-size: 70px;
+    padding:50px;
+}
+
+#about p{
+    position: center;
+    margin-top: 30px;
+    color:white;
+    font-size: 20px;
+    padding:50px;
+}
+
+#ourteam h2{
+    padding:50px;
+    color: white;
+    font-size:50px
+}
+
+ .our_team {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+  }
+
+  
+  .team {
+    display: block;
+    border-radius: 10px;
+    text-align: center;
+    margin: 50px;
+    padding: 10px;
+    font-size: 20px;
   }
   
-  #report,#result {
-    padding: 10px;
-    max-width: 400px;
-    word-wrap: break-word;
+  .team, img {
+    height: 35px;
+    align-items: center;
   }
-#result{
-  height: 400px;
-  width: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-}
-  #result img{
-    width: 200px;
-    height: 100px;
-  }
+  
+  .team h6 {
+    align-items: center;
+    font-size: 25px;
+    margin-block-start: 8px;
+    margin-block-end: 5px;
+    font-weight: bold;
+    color: white;
+  } 
+  
+  .team p {
+    align-items: center;
+    font-size: 20px;
+    color: white;
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+  } 
+  
   
